Remove service-api-nar